language/move-lang/tests/move_check/translated_ir_tests/commands/else_assigns_if_doesnt.exp
error: 

    ┌── tests/move_check/translated_ir_tests/commands/else_assigns_if_doesnt.move:3:9 ───
    │
 10 │     0x0::Transaction::assert(y == 0, 42);
    │                              ^ Invalid usage of local 'y'
    ·
 3 │     let y;
    │         - The local might not have a value due to this position. The local must be assigned a value before being used
    │

